feat: complete the autonomous evolution loop with Java-native toolchain
- Re-architect ProxyContainer with refined lock discipline and internalGet for high-concurrency.
- Finalize ActionCompiler with a high-performance Stream-based Java compiler bridge.
- Implement ActionTranslator for dynamic Java source generation and class instantiation.
- Align FileSystemActionAdapter with the class-loading metabolism for Action lifecycle.
- Optimize engine log semantics to transition from 'Requested' to 'Conclusion'.
- Ensure 100% adherence to the 100-line-per-class minimalist CDI philosophy.